# sbom_to_audit

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.md  README.md  cve_2024_3400_epss_2024-04-15_api.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: quality.yml  tests.yml
data/: README.md
data/asset_context/: false_comfort_asset.yaml  false_comfort_control_asset.yaml  ghost_logger_asset.yaml  operational_outlier_asset.yaml  operational_outlier_control_asset.yaml  rapid_pivot_asset.yaml
data/csaf/: false_comfort_vex.json  ghost_logger_vex.json  operational_outlier_vex.json  rapid_pivot_vex.json
data/decision_records/: false_comfort_authorization.yaml  false_comfort_early_warning_submission.yaml  false_comfort_full_notification_submission.yaml  ghost_logger_authorization.yaml  ghost_logger_conflict_resolution.yaml  ghost_logger_early_warning_submission.yaml  ghost_logger_full_notification_submission.yaml  operational_outlier_authorization.yaml  operational_outlier_early_warning_submission.yaml  operational_outlier_full_notification_submission.yaml  rapid_pivot_authorization.yaml  rapid_pivot_early_warning_submission.yaml  rapid_pivot_full_notification_submission.yaml  rapid_pivot_identity_resolution.yaml
data/epss_snapshots/: false_comfort_epss.json  ghost_logger_epss.json  operational_outlier_epss.json  rapid_pivot_epss.json
data/kev_snapshots/: false_comfort_kev.json  ghost_logger_kev.json  operational_outlier_kev.json  rapid_pivot_kev.json
data/mitigation/: false_comfort_initial.yaml  false_comfort_verified.yaml  ghost_logger_initial.yaml  ghost_logger_verified.yaml  operational_outlier_initial.yaml  operational_outlier_verified.yaml  rapid_pivot_initial.yaml  rapid_pivot_verified.yaml
docs/: bug_register.csv  decision_semantics.md  design_freeze_v0.2.md  known_issues.md  metrics.md  paper_asset_protocol.md  paper_claim_matrix.md  quality_assurance.md  reproduction.md  scenario_protocol.md  schema.md  stage2_0_1_correction_report.md  stage2_vertical_slice_report.md  stage3_scope_generalisation_report.md  stage4_operational_outlier_report.md  stage5_5_1_historical_epss_verification_report.md  stage5_5_2_historical_epss_correction_report.md  stage5_5_historical_replay_report.md  stage5_rapid_pivot_report.md  stage6_matched_baseline_report.md
evaluation/: README.md  baseline_protocol_v0.1.yaml  run_registry.csv  scenario_registry.csv
notebooks/: README.md  stage2_0_1_colab_checkpoint.ipynb  stage2_colab_checkpoint.ipynb  stage3_colab_checkpoint.ipynb  stage4_colab_checkpoint.ipynb  stage551_colab_checkpoint.ipynb  stage552_colab_checkpoint.ipynb  stage55_colab_checkpoint.ipynb  stage5_colab_checkpoint.ipynb  stage6_colab_checkpoint.ipynb
outputs/: README.md
paper_assets/: README.md  __init__.py  figure_table_register.csv
schemas/: evidencepack_v0.2.schema.json
scripts/: assert_verified_historical_replay.py  release_check.py  run_baseline_comparison.py  run_historical_replay.py  validate_repository.py  verify_historical_epss.py
tests/: test_authorization.py  test_baseline_comparison.py  test_baseline_protocol.py  test_baseline_workflow.py  test_cli_integration.py  test_conflict_engine.py  test_deadline_engine.py  test_evidence_record.py  test_false_comfort.py  test_historical_epss_verification.py  test_historical_reference.py  test_historical_replay.py  test_historical_replay_assertion.py  test_identity.py  test_manifest.py  test_metrics.py  test_notebooks.py  test_operational_outlier.py  test_paper_assets.py  test_parsers.py  test_properties.py  test_public_exploitation_artifact.py  test_rapid_pivot.py  test_real_format_pipeline.py  test_repository_integrity.py  test_schema.py  test_scope.py  test_scoring.py  test_source_registry.py  test_state_machine.py  test_workflow.py
(+170 files in other folders)
