[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-to-audit"
version = "0.2.0"
description = "Temporal vulnerability-evidence orchestration for auditable PSIRT decision support."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Richard Dosumu", email = "r.dosumu@gmail.com"}
]
keywords = ["SBOM", "VEX", "CSAF", "PSIRT", "NIS2", "Cyber Resilience Act"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "PyYAML>=6.0,<7",
  "jsonschema>=4.22,<5",
  "requests>=2.31,<3"
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9"]

[project.scripts]
sbom-to-audit = "sbom_to_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
