[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-to-audit"
version = "0.5.6"
description = "Temporal vulnerability-evidence orchestration for auditable PSIRT decision support."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Richard Dosumu", email = "r.dosumu@gmail.com"}
]
keywords = ["SBOM", "VEX", "CSAF", "PSIRT", "NIS2", "Cyber Resilience Act"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "PyYAML>=6.0,<7",
  "jsonschema>=4.22,<5",
  "requests>=2.31,<3"
]

[project.optional-dependencies]
dev = [
  "codespell>=2.4,<3",
  "hypothesis>=6.100,<7",
  "mypy>=1.11,<3",
  "pre-commit>=4,<5",
  "pytest>=8.0,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
  "types-jsonschema>=4.22,<5",
  "types-PyYAML>=6.0,<7",
  "types-requests>=2.31,<3",
  "yamllint>=1.35,<2"
]

[project.scripts]
sbom-to-audit = "sbom_to_audit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-config --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
  ".git",
  ".hypothesis",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  ".qa-venv",
  "build",
  "dist",
  "notebooks",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"paper_assets/scripts/build_stage2_assets.py" = ["E501"]
"paper_assets/scripts/build_stage3_assets.py" = ["E501"]
"paper_assets/scripts/build_stage4_assets.py" = ["E501"]
"paper_assets/scripts/build_stage55_assets.py" = ["E501"]
"paper_assets/scripts/build_stage551_assets.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.coverage.run]
branch = true
source = ["sbom_to_audit"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
